js/js.translator/testData/incremental/invalidation/fileNameClashPerModule/lib/f1.3.kt
package foo

@JsExport
fun test1() = test2()